--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -6,12 +6,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "cross-env NODEPOP_ENV=production node server.js",
+    "dev": "cross-env DEBUG=nodepop:*NODEPOP_ENV=development node --watch server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
+    "debug": "^4.3.7",
     "express": "^4.21.1"
   }
 }
