--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODEPOP_ENV=production node server.js",
-    "dev": "cross-env DEBUG=nodepop:*NODEPOP_ENV=development node --watch server.js"
+    "dev": "cross-env DEBUG=nodepop:* NODEPOP_ENV=development node --watch server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "http-errors": "^2.0.0",
+    "morgan": "^1.10.0"
   }
 }
