--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
     "ejs": "^3.1.10",
