--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODEPOP_ENV=production node server.js",
-    "dev": "cross-env DEBUG=nodepop:* NODEPOP_ENV=development node --watch server.js"
+    "dev": "cross-env DEBUG=nodepop:* NODEPOP_ENV=development node --watch server.js",
+    "initDB": "node initDB.js"
   },
   "keywords": [],
   "author": "",
